# nordpool-imd-daily-average

./: .gitignore  README.md  pyproject.toml  slask.py
.github/workflows/: push_to_repo.yaml  pylint.yml  ruff.yaml
modules/: nordpool.py
nordpool/: nordpool.py
